--- a/package.json
+++ b/package.json
@@ -1,34 +1,82 @@
 {
+
   "name": "food-order-app",
+
   "version": "0.1.0",
+
   "private": true,
+
   "scripts": {
+
     "dev": "next dev --turbopack",
+
     "build": "next build",
+
     "start": "next start",
+
     "lint": "next lint"
+
   },
+
   "dependencies": {
+
     "@emotion/react": "^11.14.0",
+
     "@emotion/styled": "^11.14.0",
+
     "@mui/icons-material": "^7.1.0",
+
     "@mui/material": "^7.1.0",
+
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+
+    "clsx": "^2.1.1",
+
     "framer-motion": "^12.15.0",
+
     "lucide-react": "^0.511.0",
+
     "next": "15.3.2",
+
     "react": "^19.0.0",
+
     "react-dom": "^19.0.0",
+
+    "react-hot-toast": "^2.5.2",
+
     "react-icons": "^5.5.0",
+
     "react-intersection-observer": "^9.16.0",
-    "react-toastify": "^11.0.5"
+
+    "react-toastify": "^11.0.5",
+
+    "react-tooltip": "^5.28.1",
+
+    "recharts": "^2.15.3",
+
+    "sonner": "^2.0.5",
+
+    "tailwind-merge": "^3.3.0"
+
   },
+
   "devDependencies": {
+
     "@eslint/eslintrc": "^3",
+
     "@tailwindcss/postcss": "^4",
+
     "autoprefixer": "^10.4.21",
+
     "eslint": "^9",
+
     "eslint-config-next": "15.3.2",
+
     "postcss": "^8.5.3",
+
     "tailwindcss": "^3.4.1"
+
   }
+
 }
+
